...
        },
      }}
    >
      <Tabs.Screen
        name="index"
        options={{
          title: "Home",
          tabBarIcon: ({ color }) => <Icon icon={Home} color={color} size={26} />,
        }}
      />
      <Tabs.Screen
        name="music"
        options={{
...
          tabBarIcon: ({ color }) => <Icon icon={Music} color={color} size={26} />,
        }}
      />
      <Tabs.Screen
        name="movies"
        options={{
          title: "Movies & Shows",
          tabBarIcon: ({ color }) => <Icon icon={Film} color={color} size={26} />,
        }}
      />
      <Tabs.Screen
        name="search"
        options={{
...
